# python-web-hw14

./: .env_example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/migrations/versions/: 0d77626c1190_init.py
app/src/database/: models.py
app/src/routes/: contacts.py
app/src/schemas/: contacts.py  tokens.py
app/src/services/: auth.py  email.py
app/src/utils/: is_leap_year.py
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 04c1b71bddf4_init.py  233a00c5eb82_init.py  3d119b537b6e_init.py  62e4acb77d57_init.py  6fc9684c01d0_init.py  c827e098192a_init.py
src/conf/: config.py
src/database/: connect_db.py  create_all.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  tokens.py  users.py
src/services/: auth.py  email.py
src/utils/: seed.py
tests/: conftest.py  create_tables.py  seed.py  test_routes_auth.py  test_routes_contacts.py  test_routes_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
